--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   cupertino_list_tile: ^0.2.0
   modal_bottom_sheet: ^2.0.0
   shared_preferences: ^2.0.9
+  metadata_fetch: ^0.4.1
+  provider: ^6.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
